logs/bot_run__0900.log
 
============================================== 
Gold Trading Bot Run 
Started: 12-01-2026  9:00:01.96 
============================================== 
 
[*] Running bot... 
[+] Bot initialized successfully

======================================================================
[*] GOLD TRADING BOT CYCLE - 2026-01-12 09:00:08
======================================================================

[*] Updating data...
  [*] Updating GLD data...

============================================================
[*] Starting GLD data update...
============================================================
[*] Fetching GLD data from 2025-01-12 to 2026-01-12...
[+] Downloaded 250 records
[*] Columns: ['date', 'close', 'high', 'low', 'open', 'volume']

[*] Data structure:
Price       date       close        high         low        open   volume
0     2025-01-13  245.740005  246.789993  245.149994  246.339996  8448600
1     2025-01-14  247.029999  247.039993  245.520004  245.619995  4914800
[*] Cleaning GLD data...
[+] Removed duplicates: 250 records remain
[+] Removed NaN rows: 250 records remain
[*] Calculating technical indicators...
[+] SMA_20 calculated
[+] SMA_50 calculated
[+] RSI calculated
[+] Daily_Return calculated
[+] Removed NaN from indicators: 201 records remain
[+] Data cleaning complete: 201 rows
[+] Data saved to data/gld_data.csv

[+] Successfully updated GLD data (201 records)
[+] Date range: 2025-03-25 00:00:00 to 2026-01-09 00:00:00
============================================================

  [*] Fetching market news...

======================================================================
[*] FETCHING MARKET NEWS
======================================================================
[*] Start time: 2026-01-12 09:00:11
[-] NewsAPI key not configured. Using sample news data...
[*] Returning sample news data...
[*] Processing 3 articles...
[+] Processed 3 articles into DataFrame
[+] News data saved to data/market_news.csv
======================================================================
[+] Data updated successfully
[*] Running backtest analysis...
[*] Generating rule-based signals...
[+] Generated signals: 26 BUY, 0 SELL
[-] Error: 'charmap' codec can't encode character '\u20b9' in position 27: character maps to <undefined>
 
[-] Bot failed with exit code 1 at  9:00:25.19 
============================================== 
 
 
============================================== 
Gold Trading Bot Run 
Started: 17-01-2026  9:00:01.26 
============================================== 
 
[*] Running bot... 
Traceback (most recent call last):
  File "N:\gold-trading-bot\main_bot.py", line 21, in <module>
    from telegram_alerts import TelegramAlerts
  File "N:\gold-trading-bot\telegram_alerts.py", line 45
    <b>\u26a0\ufe0f {error_type} ALERT</b>
       ^
SyntaxError: invalid character '\u26a0' (U+26A0)
 
[-] Bot failed with exit code 1 at  9:00:02.63 
============================================== 
 
